--- a/report/sections/ch1-intro.tex
+++ b/report/sections/ch1-intro.tex
@@ -27,4 +27,4 @@ Furthermore we decided to expand upon the problem-domain we set for ourselves an
 
 In the flowchart above, it is possible to see the different approaches we could take to map different unknown terrains. The outcome of this flow chart came from a brainstorming session too, after some very initial research has been done within the problem-domain of \textit{mapping and navigation}.
 
-Thereafter, we decided to continue on with the selected problem-domain and started using a W-diagram model to expand upon it further and to identify the parts needed to be researched. This method will help us to come up with a solution to the problem at hand.
+Thereafter, we decided to continue with the selected problem-domain and started using a 6W-diagram model to expand upon it further and to identify the parts needed to be researched. This method helped us to come up with a solution to the problem at hand.
