--- a/report/sections/ch2-intro.tex
+++ b/report/sections/ch2-intro.tex
@@ -1,4 +1,4 @@
-Since the beginning of time, early human settlements were eager to explore their environment and surroundings. It did not take long, until the very first humans started getting even further and eventually become explorers. They left marks and started using landmarks to remember pathways and places. This primitive representation of prehistoric places and early history maps can be traced back to 24000-25000 BC\cite{cavedrawings}. Soon after, they started using maps, which revolutionized the way we navigate and the way we travel, - and therefore the field of Cartography was born. During the 19th century, terra incognita \textit{(orig. Latin, ‘unknown land.’)} disappeared from maps, since both the coastlines and the inner parts of the continents had been fully explored. Today, using technology and satellites, Earth is completely mapped\cite{earth-mapped}, yet still not completely explored\cite{earth-explored}. Around 95 percent of our oceans still remains unexplored, considering that they take up 70 percent of the planet's surface\cite{oceandepth}. This is mostly due to extreme conditions and high depths, that humans can not be put up against. As technology advanced and matured, remotely operated underwater vehicles (ROVs) become a popular way of exploring the depths of the oceans, due to their accessibility to places where humans could not possibly go before for a long period of time. In the meantime, interplanetary exploration took off during the mid-20th century with the start of the Cold War between the United States of America and the Soviet Union. This led to many great achievements in the field of rocket science and space exploration, like the first successful interplanetary encounter, where the US Mariner 2 flew by Venus\cite{firstflyby} or when the Soviet Venera 3 made first impact on the surface of Venus\cite{firstimpact}. One of the latest successful programs is the Mars rover CURIOSITY\cite{curiosity}, which landed and still is making progress in exploring and sending back scientific data of the planet Mars. Exploring planets for future-settlements and first-contact is very important in order to quench out human curiosity but also for advancing the different fields in science and technology.
+Since the beginning of time, early human settlements were eager to explore their environment and surroundings. It did not take long, until the very first humans started moving even further and eventually became explorers. They left marks in the environment and started using landmarks to remember pathways and places. This primitive representation of prehistoric places and early history maps can be traced back to 24000-25000 BC\cite{cavedrawings}. Soon after, they started using maps, which revolutionized the way we navigate and the way we travel, - and therefore the field of Cartography was born. During the 19th century, terra incognita \textit{(orig. Latin, ‘unknown land.’)} disappeared from maps, since both the coastlines and the inner parts of the continents had been fully explored. Today, using technology and satellites, Earth is completely mapped\cite{earth-mapped}, yet still not completely explored\cite{earth-explored}. Around 95 percent of our oceans still remain unexplored, considering that they take up 70 percent of the planet's surface\cite{oceandepth}. This is mostly due to extreme conditions and high depths, that humans can not be put up against. As technology advanced and matured, remotely operated underwater vehicles (ROVs) became a popular way of exploring the depths of the oceans, due to their accessibility to places where humans could not possibly go before for a long period of time. In the meantime, interplanetary exploration took off during the mid-20th century with the start of the Cold War between the United States of America and the Soviet Union. This led to many great achievements in the field of rocket science and space exploration, like the first successful interplanetary encounter, where the US Mariner 2 flew by Venus\cite{firstflyby} or when the Soviet Venera 3 made first impact on the surface of Venus\cite{firstimpact}. One of the latest successful programs is the Mars rover CURIOSITY\cite{curiosity}, which landed and still is making progress in exploring and sending back scientific data of the planet Mars. Exploring planets for future-settlements and first-contact is very important in order to quench out human curiosity but also for advancing the different fields in science and technology.
 
 \clearpage
 
@@ -35,12 +35,12 @@ When dealing with unknown environments, the word \textit{'unknown'} does not str
 Even though most of the land has been explored and is being used for its vast amount of resources, the time will come where planetary and ocean exploration becomes a key factor for our technological advancements and our own resources on planet Earth. Ocean exploration is important because it provides data from deep-sea areas, which in turn will reduce the amount of unknown environments left on our planet.
 Gathering data and intelligence from the ocean also helps with managing the resources that are available in the deep-sea areas, so that future generations can benefit from them. The ocean also provides information about future environmental conditions and can help predict earthquakes and tsunamis. Investigating the deep-sea also reveals new ecosystems and possible sources for medication, food and energy, which are all vital for scientific advancements or survival on Earth\cite{oceanexplo}.
 
-Humans have always had never-ending interest and the need to push science and technology over its limits, and a desire to achieve something even further than what is possible. The many challenges humans have faced so far, has led to many benefits for our society since its creation. Space exploration helps to further our understanding about the history of our universe and solar system\cite{whyweexplo}.
+Humans have always had never-ending interest and the need to push science and technology beyond its limits, and a desire to achieve something even further than what is possible. The many challenges humans have faced so far, has led to many benefits for our society since its creation. Space exploration helps to further our understanding about the history of our universe and solar system\cite{whyweexplo}.
 
 \subsection{To whom and what is this a problem?}
-Unknown terrains and environments pose a big issue for scientists and engineers who want to explore these areas. Designing vehicles and devices for the deep-sea ocean or planetary exploration is impossible without any background information on what environmental factors they will be dealing with or encountering during the set mission. Exploration is essential when, in the future, new resources are needed for scientific and technological advancements, that is currently out of our reach.
+Unknown terrains and environments pose a big issue for scientists and engineers who want to explore these areas. Designing vehicles and devices for the deep-sea ocean or planetary exploration is impossible without any background information on what environmental factors they will be dealing with or encountering during the set mission. Exploration is essential when, in the future, new resources are needed for scientific and technological advancements, that are currently out of our reach.
 
-In the long run, humans in general will be affected by the lack of exploration. Alternative resources and habitable areas for expansion will be necessary in the future, when Earth's natural resource-deposits become depleted and no habitable places left. 
+In the long run, humans in general will be affected by the lack of exploration. Alternative resources and habitable areas for expansion will be necessary in the future, when Earth's natural resource-deposits become depleted and no habitable places are left. 
 
 Scientists are heavily hindered by society, because it is becoming too focused on risks. Only 5 percent of the ocean has been explored so far, which leaves a large amount of areas untouched and unmapped. Being concerned about taking risks is what will put the future development and science in jeopardy\cite{risksandexplo}. 
 
