--- a/report/sections/preface.tex
+++ b/report/sections/preface.tex
@@ -1,7 +1,7 @@
 \chapter*{Preface\markboth{Preface}{Preface}}\label{ch:preface}
 \addcontentsline{toc}{chapter}{Preface}
 
-The project entitled ’Mapping and navigation of unknown terrain’ was made by four students from the Electronics and Computer Engineering programme at Aalborg Universitet Esbjerg, for the P2 project in the second semester.
+The project entitled ’Mapping and navigation of unknown terrain’ was made by four students from the Electronics and Computer Engineering programme at Aalborg University Esbjerg, for the P2 project in the second semester.
 
 From hereby on, every mention of 'we' refers to the four co-authors listed below.
 
