--- a/report/sections/ch2-stakeholder-analysis.tex
+++ b/report/sections/ch2-stakeholder-analysis.tex
@@ -2,16 +2,16 @@
 \section{Stakeholder analysis}
 	
 \subsection{Interested parties}
-\textbf{Interested parties} are the groups of people who are being affected either negatively or positively by the problem in question. They have some influence over the development, as the trends and actions of these interested parties has to be taken into consideration by the development team and the people involved with the project. They don not necessarily take any direct action in the project.
+\textbf{Interested parties} are the groups of people who are being affected either negatively or positively by the problem in question. They have some influence over the development, as the trends and actions of these interested parties has to be taken into consideration by the development team and the people involved with the project. They do not necessarily participate directly in the project.
 
 \subsubsection{NASA}
-The National Aeronautics and Space Administration, or more commonly known as NASA, is a governmental agency in the United States, responsible for aerospace research and civilian space programs. Many manned- and unmanned missions to new planets require extensive research of that planet prior to the mission. It might even require sending exploratory rovers or satellites to examine the environment and to map out possible landing sites. Rovers are commonly used and equipped with similar technology that we are producing, as in all cases, the environment is unknown, external technologies, like GPS is not available and no maps are generated of these planets without previous research missions. 
+The National Aeronautics and Space Administration, or more commonly known as NASA, is a governmental agency in the United States, responsible for aerospace research and civilian space programs. Many manned- and unmanned missions to new planets require extensive research of that planet prior to the mission. It might even require sending exploratory rovers or satellites to examine the environment and to map out possible landing sites. Rovers are commonly used and equipped with similar technology that we are producing, as in all cases, the environment is unknown, external technologies, like GPS are not available and no maps are generated of these planets without previous research missions. 
 
 \subsubsection{ESA}
 The European Space Agency or simply ESA, is the European counter-part of NASA, governed by 22 member states, with the aim of space exploration and research. Similar interest applies to ESA as to NASA, therefore they can be classified as an \textit{Interested party} in our assessment.
 
 \subsubsection{The Royal Danish Army}
-The Royal Danish Army, or simply The Army, is the land warfare branch of the Danish Defense Forces, together with the Danish Home Guard. Their main tasks is to prevent conflicts and wars, through crisis management and co-operation with NATO and allied forces\cite{armytasks}. In case of a conflict or war, drones are commonly used to map out potential war sites before a planned attack or defense, thus making them a good candidate at potentially implementing our technology.
+The Royal Danish Army, or simply The Army, is the land warfare branch of the Danish Defence Forces, together with the Danish Home Guard. Their main tasks are to prevent conflicts and wars, through crisis management and co-operation with NATO and allied forces\cite{armytasks}. In case of a conflict or war, drones are commonly used to map out potential war sites before a planned attack or defence, thus making them a good candidate at potentially implementing our technology.
 
 \subsubsection{The National Police}
 Also known as \textit{Rigspolitet}\cite{Police}, The National Police is the national police force of Denmark, also having authority over regions governed by The Kingdom of Denmark, the Faroe Islands and Greenland. As the nations main police force, it is part of their duty to avert any danger or possible terrorist attack in order to protect the population and public peace. As we identified dealing with terrorist attacks and hostage situations as a possible application for our technology, The National Police would be a potential user of such technology in these unfortunate events, assisting them with mapping a building where a kidnapping might take place or any other criminal offence, as an example.
@@ -68,7 +68,7 @@ The table above contains the names of the different people involved with or inte
 	\label{fig:stakeholder}
 \end{figure}
 
-The following chart showcases how do we categorize our stakeholders on the Power/Interest grid, used commonly for stakeholder analysis.
+Figure \ref{fig:stakeholder} showcases how do we categorize our stakeholders on the Power/Interest grid, used commonly for stakeholder analysis.
 The different colors used for distinguishing between the three types of stakeholders we identified: orange for \textit{interested parties}, green for \textit{actors} and red for \textit{technology carriers}.
 The for sections can be defined as:
 \begin{itemize}
